Bug 70275 - Incorrect import of custom text cell format
Summary: Incorrect import of custom text cell format
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.1.2 release
Hardware: Other All
: medium critical
Assignee: Markus Mohrhard
URL:
Whiteboard: BSA target:4.2.0 target:4.1.5
Keywords: regression
: 69299 70344 72252 72891 73305 (view as bug list)
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-10-08 10:28 UTC by QY
Modified: 2022-09-12 16:28 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
test_file.ods with damaged cell A1 (6.88 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-10-08 10:28 UTC, QY
Details

Note You need to log in before you can comment on or make changes to this bug.
Description QY 2013-10-08 10:28:59 UTC
Created attachment 87271 [details]
test_file.ods with damaged cell A1

Problem description: 

Steps to reproduce:
1. set data format /@ in cell A1
2. type >, press enter, it looks like />
3. save file
4. open saved file

Current behavior:
After opening saved file there is //> in cell A1

Expected behavior:
After opening saved file I expect /> in cell A1
              
Operating System: All
Version: 4.1.1.2 release
Comment 1 Stanislav Horacek 2013-10-08 16:01:29 UTC
Thanks for the report!
I can confirm this for 4.1.2.2 on Ubuntu 13.04.
It works in the 4.0 series (tested in 4.0.4) - marking as regression. Importance increased to critical due to a data loss.
Comment 2 m.a.riosv 2013-10-08 21:41:59 UTC
Seems that any text around @ format is added to cell content when the file is reloaded, but if the file is saved without changes doesn't happen.

A really hard issue.
Added to MAB for 4.1
Comment 3 m.a.riosv 2013-10-11 00:39:43 UTC
*** Bug 70344 has been marked as a duplicate of this bug. ***
Comment 4 Markus Mohrhard 2013-10-27 14:01:11 UTC
It is an import problem in xmlcelli.cxx. We import string-value which is the formatted string as original string.

I think it is the result of some preformance work to avoid using editengine in simple text import. I need to think about a solution to use the normal string without editengine.
Comment 5 Markus Mohrhard 2013-10-27 15:30:22 UTC
Ok fixed it. We somehow switched the formatted and original string.
Comment 6 Commit Notification 2013-10-27 15:50:36 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=591827c9ad0bec8b608bec63942aa7daf87dc5a0

fix cell text and unformatted cell text correctly, fdo#70275



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2013-10-28 21:59:30 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=17d8e1f9eacb10654f2feb31df2fe0638af2b370

add test for fdo#70275



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Kevin Suo 2013-11-06 06:41:35 UTC
This is an anoying critical bug, so why not push it to 4.1 series (4.1.4)?
Comment 9 m.a.riosv 2013-12-03 02:10:30 UTC
*** Bug 69299 has been marked as a duplicate of this bug. ***
Comment 10 m.a.riosv 2013-12-03 02:11:30 UTC
*** Bug 72252 has been marked as a duplicate of this bug. ***
Comment 11 m.a.riosv 2013-12-19 23:21:56 UTC
*** Bug 72891 has been marked as a duplicate of this bug. ***
Comment 12 GerardF 2014-01-05 17:20:12 UTC
*** Bug 73305 has been marked as a duplicate of this bug. ***
Comment 13 James Murray 2014-01-05 18:00:38 UTC
I agree with comment#8. Please could this be applied to 4.1
Comment 14 retired 2014-01-07 00:33:49 UTC
4.2 is due end of january, so not too far away...
Comment 15 Eike Rathke 2014-01-20 22:31:21 UTC
A fix pending review
for 4-1 at https://gerrit.libreoffice.org/7555
for 4-1-5 at https://gerrit.libreoffice.org/7556
Comment 16 Commit Notification 2014-01-21 08:30:48 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=70c61a549184cf8611f7890ac31b0ba4c460cdec&h=libreoffice-4-1

resolved fdo#70275 write correct office:string-value if text format applied


It will be available in LibreOffice 4.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2014-01-28 03:02:43 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=68a753b6a36560eb83ba6ebe4fe9897a8759d265&h=libreoffice-4-1-5

resolved fdo#70275 write correct office:string-value if text format applied


It will be available already in LibreOffice 4.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.