fix cell text and unformatted cell text correctly, fdo#70275

Conflicts:
	sc/source/filter/xml/xmlexprt.cxx

Change-Id: I0a37af434a9527ebf1e790d9c3ebd519b7684955